--- a/src/app/components/user-details/user-details.component.html
+++ b/src/app/components/user-details/user-details.component.html
@@ -1,1 +1,2 @@
-<p>user-details works!</p>
+<!--<p>{{user?.id}} {{user?.name}} {{user?.email}}</p>-->
+<p>{{user.id}} {{user.name}} {{user.email}}</p>
