--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,3 @@
-<p>{{user.name}}{{user.address}}<a [routerLink]="[user.id]">details</a></p>
+<p>{{user.name}}{{user.address}}
+  <button (click)="navTo()">details</button>
+</p>
