--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <a routerLink="users">users page</a>
 <a routerLink="posts">posts page</a>
 <a routerLink="comments">comments page</a>
-
-
+<hr>
+<app-forms></app-forms>
+<hr>
 <router-outlet></router-outlet>
