--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,2 +1,4 @@
- <app-user *ngFor="let user of users" [user] = 'user' ></app-user>
+<h1>{{age}}</h1>
+<h2>{{name}}</h2>
+ <app-user *ngFor="let user of users" [user] = 'user' (userName)="getName($event)"></app-user>
   <router-outlet></router-outlet>
