--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,2 +1,3 @@
-<p>{{user.name}}{{user.address}}<a [routerLink]="[user.id]">details</a></p>
+<p>{{user.name|json}}{{user.address}}<a [routerLink]="[user.id]">details</a></p>
 <button (click)="lift()">add name</button>
+<p>{{user.id|stringify}}</p>
