--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,7 @@
-<a routerLink="users">users page</a>
-<a routerLink="posts">posts page</a>
-<a routerLink="comments">comments page</a>
-<hr>
-<app-forms></app-forms>
-<hr>
-<app-test></app-test>
-<router-outlet></router-outlet>
+<h1>home</h1>
 
+<a routerLink="/users">users</a>
+<a routerLink="/">home</a>
+
+
+<router-outlet></router-outlet>
